# gitrun

./: CONTRIBUTING.md  README.md  pyproject.toml
gitrun/: cli.py  core.py
